Support-ish for hooking into java.lang.System/currentTimeMillis